--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
-export/
 .vscode/
-APIStuff.hx
-art/build_x32-officialrelease.bat
-art/build_x64-officialrelease.bat
-art/test_x64-debug-officialrelease.bat
+.github/
+assets/
+manifest/
+plugins/
+/do NOT readme
+/icon
+/libvlc.dll
+/libvlccore.dll
+/lime.ndll
+/PsychEngine
