--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,9 @@
 assets/
 manifest/
 plugins/
-/do NOT readme
-/icon
+/do NOT readme.txt
+/icon.ico
 /libvlc.dll
 /libvlccore.dll
 /lime.ndll
-/PsychEngine
+/PsychEngine.exe
